<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.in.hitch.Activities.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/woman_bg"
        android:scaleType = "centerCrop"/>

    <ScrollView
        android:id="@+id/sign_up_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/layout_border"
            android:backgroundTint="#CCF3BEDC"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/login_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_img"
                android:layout_alignParentBottom="true"                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/Sign_Up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_24sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/Contact_Number"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/sprCode"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_contentColor="@color/white"
                            app:ccp_defaultNameCode="IN"
                            app:ccp_textSize="@dimen/_14sdp" />

                        <EditText
                            android:id="@+id/mo_Number"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:backgroundTint="@color/md_white_1000"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:gravity="left"
                            android:maxLength="10"
                            android:hint="@string/Enter_Contact_number"
                            android:inputType="phone"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/button_border"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/Get_OTP"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/go_to_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_18sdp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/Sign_Up_Message"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Sign_Up_With"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:layout_weight="1"
                            android:gravity="right">

                            <LinearLayout
                                android:id="@+id/date1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="@dimen/_120sdp"
                                    android:layout_height="@dimen/_37sdp"
                                    android:layout_gravity="center"
                                    android:background="@drawable/button_border"
                                    android:drawableLeft="@drawable/facebook_new_icon"
                                    android:gravity="center"
                                    android:paddingLeft="@dimen/_5sdp"
                                    android:text="@string/Sign_Up_fb"
                                    android:fontFamily="@font/montserrat_semi_bold"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_16sdp" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:layout_weight="1"
                            android:gravity="right">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="@dimen/_120sdp"
                                    android:layout_height="@dimen/_37sdp"
                                    android:layout_gravity="center"
                                    android:background="@drawable/button_border"
                                    android:drawableLeft="@drawable/google_new_icon"
                                    android:gravity="center"
                                    android:paddingLeft="@dimen/_10sdp"
                                    android:text="@string/Sign_Up_Google"
                                    android:fontFamily="@font/montserrat_semi_bold"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_16sdp" />

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>