<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.in.hitch.Activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:scaleType="centerCrop"/>

        <LinearLayout
            android:id="@+id/login_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_220sdp"
            android:background="@drawable/layout_border"
            android:backgroundTint="#CCF3BEDC"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                        android:id="@+id/login_with_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:background="@drawable/button_border"
                    android:backgroundTint="@color/md_pink_50"
                    android:drawableStart="@drawable/google_icon"
                    android:paddingLeft="@dimen/_25sdp"
                    android:text="@string/login_with_google"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/login_with_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:background="@drawable/button_border"
                    android:backgroundTint="@color/md_pink_50"
                    android:drawableStart="@drawable/call___"
                    android:paddingLeft="@dimen/_25sdp"
                    android:text="@string/login_with_number"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/login_with_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:background="@drawable/button_border"
                    android:backgroundTint="@color/md_pink_50"
                    android:drawableStart="@drawable/facebook_icon"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="@dimen/_25sdp"
                    android:text="@string/login_with_facebook"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

        </LinearLayout>

</RelativeLayout>