<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.in.hitch.Activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/varification_bg" />

    <ScrollView
        android:id="@+id/sign_up_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_220sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/layout_border"
                android:backgroundTint="#CCF3BEDC"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_150sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="20dp"
                        android:gravity="left"
                        android:text="@string/OTP_Verification"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_24sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/send_otp_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:fontFamily="sans-serif"
                            android:text="@string/Enter_otp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/otp1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/_7sdp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/md_white_1000"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/otp2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:layout_marginRight="@dimen/_7sdp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/md_white_1000"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/otp3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:layout_marginRight="@dimen/_7sdp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/md_white_1000"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/otp4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/md_white_1000"
                                android:fontFamily="sans-serif"
                                android:gravity="center"
                                android:inputType="number"
                                android:maxLength="1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/go_to_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/Enter_Digit"
                        android:textColor="@color/md_white_1000"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/verify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@drawable/button_border"
                        android:fontFamily="sans-serif"
                        android:text="@string/Verify_otp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:maxLines="1"
                            android:text="Didn't receive the OTP? "
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/resend"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/Resend_otp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>